# tap-massive

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  fetch_massive_flat_files.sh  find_min_valid_data_dates.py  meltano.yml  pyproject.toml  tox.ini
.github/: CHANGELOG_AUTOMATION.md
.github/workflows/: analyze-changelog-with-claude.yml  monitor-massive-changelog.yml
tap_massive/: __init__.py  __main__.py  alternative_streams.py  base_streams.py  benzinga_streams.py  client.py  crypto_streams.py  disk_cache.py  earnings_subset.py  economy_streams.py  etf_global_streams.py  flat_files_streams.py  forex_streams.py  fundamental_streams.py  futures_streams.py  indices_streams.py  option_streams.py  quote_snapshot_streams.py  quote_update_bar_streams.py  s3_download.py  stock_streams.py  subset_quotes.py  tap.py  tmx_streams.py  utils.py
tests/: __init__.py  duckdb_helpers.py  test_bars_status_flags.py  test_cache_integration.py  test_cache_path_resolution.py  test_core.py  test_disk_cache.py  test_earnings_quotes_schema.py  test_flat_files_download.py  test_flat_files_duckdb.py  test_monitor_massive_changelog_workflow.py  test_options_flat_files_quotes.py  test_options_partitioning.py  test_quote_snapshots.py  test_quote_update_bars.py  test_s3_download_retry.py  test_select_tickers_reliability.py  test_stock_flat_files_quotes.py  test_stock_streams.py  test_tap_init_path_args.py  test_ticker_source_feed_schema.py  test_top_market_movers_reliability.py
tests/fixtures/: test_options_quotes.csv  test_stock_quotes.csv
